--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Release to the public PyPI repository
         uses: ansys/actions/release-pypi-public@v6
         with:
-          library-name: "ansys-api-geometry"
+          library-name: "ansys-api-dbu"
           use-trusted-publisher: true
 
       - name: Release
