--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
 [build-system]
-requires = ["setuptools >= 42.0.0", "wheel", "ansys_tools_protoc_helper>=0.4.0"]
+requires = [
+    "setuptools >= 42.0.0, <78", # TODO: REMOVE UPPER LIMIT ONCE IT IS ADAPTED ON THE RELEASE ACTION
+    "wheel",
+    "ansys_tools_protoc_helper>=0.4.0"
+]
 build-backend = "setuptools.build_meta:__legacy__"
